--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
   tests:
     strategy:
       matrix:
-        version: [ '14.x', '16.x', 'lts/*' ]
+        version: [ '14.x', '16.x', 'lts/*', 'latest' ]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
