--- a/package.json
+++ b/package.json
@@ -3,51 +3,20 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "packageManager": "^pnpm@7.30.0",
-  "pnpm": {
-    "default": "7.30.0"
-  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:coverage": "vitest run --coverage",
-    "lint:fix": "eslint ./src --ext .jsx,.js,.ts,.tsx --quiet --fix --ignore-path ./.gitignore",
-    "lint:format": "prettier  --loglevel warn --write \"./**/*.{js,jsx,ts,tsx,css,md,json}\" ",
-    "lint": "yarn lint:format && yarn lint:fix ",
-    "type-check": "tsc"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "normalize.css": "^8.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "styled-components": "^5.3.9"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@types/eslint": "^8.21.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@types/styled-components": "^5.1.26",
-    "@typescript-eslint/eslint-plugin": "^5.10.2",
-    "@typescript-eslint/parser": "^5.10.2",
     "@vitejs/plugin-react-swc": "^3.0.0",
-    "@vitest/coverage-c8": "^0.29.7",
-    "@vitest/ui": "^0.29.7",
-    "eslint": "^8.8.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
-    "jsdom": "^21.1.1",
-    "prettier": "^2.5.1",
     "typescript": "^4.9.3",
-    "vite": "^4.2.0",
-    "vitest": "^0.29.7"
+    "vite": "^4.2.0"
   }
 }
