--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "jsdom": "^21.1.1",
+    "lint-staged": "^13.2.0",
     "prettier": "^2.5.1",
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
