--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ jobs:
   tests:
     strategy:
       matrix:
-        version: [ '14.x', '16.x', 'lts/*', 'latest' ]
+        version: ['lts/*', 'latest' ]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
