--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
           version: ^7.30.0
 
       - name: Run Type Checks
-        run: pnpm type-checks
+        run: pnpm type-check
 
       - name: Run Tests
         run: pnpm test:coverage
